Bug 366137 - contactthemeeditor crash when closing
Summary: contactthemeeditor crash when closing
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mageia RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-07-26 16:23 UTC by Nicolas L.
Modified: 2016-07-27 12:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas L. 2016-07-26 16:23:21 UTC
Application: contactthemeeditor (5.2.3)

Qt Version: 5.6.1
Frameworks Version: 5.24.0
Operating System: Linux 4.7.0-desktop-0.rc7.6.mga6 x86_64
Distribution: "Mageia 6"

-- Information about the crash:
- What I was doing when the application crashed:

I tried to close contactthemeeditor and it crashed.
I can reproduce this everytime.

The crash can be reproduced every time.

-- Backtrace:
Application: Contacter l'éditeur du thème (contactthemeeditor), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f6e45cb1840 (LWP 8484))]

Thread 3 (Thread 0x7f6e4087d700 (LWP 8486)):
#0  0x00007f6e53aac844 in g_mutex_unlock () from /lib64/libglib-2.0.so.0
#1  0x00007f6e53a693a9 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#2  0x00007f6e53a694bc in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007f6e5cce63ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#4  0x00007f6e5cc91c9a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#5  0x00007f6e5cacb37c in QThread::exec() () from /lib64/libQt5Core.so.5
#6  0x00007f6e602e0615 in QDBusConnectionManager::run() () from /lib64/libQt5DBus.so.5
#7  0x00007f6e5cacffb9 in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#8  0x00007f6e5b1d666d in start_thread () from /lib64/libpthread.so.0
#9  0x00007f6e5c1d2d8d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f6e41e67700 (LWP 8485)):
#0  0x00007f6e5c1c6f3d in poll () from /lib64/libc.so.6
#1  0x00007f6e4cb68902 in _xcb_conn_wait () from /lib64/libxcb.so.1
#2  0x00007f6e4cb6a657 in xcb_wait_for_event () from /lib64/libxcb.so.1
#3  0x00007f6e440322b9 in QXcbEventReader::run() () from /lib64/libQt5XcbQpa.so.5
#4  0x00007f6e5cacffb9 in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#5  0x00007f6e5b1d666d in start_thread () from /lib64/libpthread.so.0
#6  0x00007f6e5c1d2d8d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f6e45cb1840 (LWP 8484)):
[KCrash Handler]
#6  0x0000000000000000 in ?? ()
#7  0x000000000040f54b in main (argc=1, argv=<optimized out>) at /usr/src/debug/kdepim-16.04.3/grantleeeditor/contactthemeeditor/main.cpp:69

Possible duplicates by query: bug 366134, bug 366015, bug 366006, bug 365991, bug 365861.

Reported using DrKonqi
Comment 1 Nicolas L. 2016-07-26 16:25:57 UTC
Btw it crashed when closing by the "right cross" not when using the quit menu option.
Comment 2 Laurent Montel 2016-07-27 11:49:09 UTC
Please install debug package to have a correct backtrace.
Thanks.
Comment 3 Laurent Montel 2016-07-27 12:08:06 UTC
Git commit d432db354de89b98a8af81557da7af1dfe3bbc55 by Montel Laurent.
Committed on 27/07/2016 at 12:07.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 366137 - contactthemeeditor crash when closing
FIXED-IN: 5.3.0

M  +6    -0    grantleeeditor/contactthemeeditor/contacteditormainwindow.cpp
M  +1    -0    grantleeeditor/contactthemeeditor/contacteditormainwindow.h
M  +0    -1    grantleeeditor/contactthemeeditor/main.cpp

http://commits.kde.org/kdepim/d432db354de89b98a8af81557da7af1dfe3bbc55
Comment 4 Nicolas L. 2016-07-27 12:41:13 UTC
thank you for this quick fix.