Fix Bug 366137 - contactthemeeditor crash when closing

BUG: 366137
FIXED-IN: 5.3.0